src/test/deca/context/invalid/sansObj/divis-bool.deca
// Description:
//    Division d'un int et d'un boolean
//
// Résultat:
//Opération entre 2 objets de types incompatibles

{
   int a;
   boolean b = false;

   // Doit etre refuse.
   a = a / b;
}